# cpp-20-2023-06-25

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile.alt
_exercises/ex-compare/: comparisons.cpp
_exercises/ex-concepts/: concepts_and_constraints.cpp
_exercises/ex-ranges/: ranges.cpp
compare/: comparisons.cpp
compile-time-programming/: compile_time_programming.cpp
concepts/: auto_template_functions.cpp  concepts_and_constraints.cpp
coroutines/: coroutines.cpp
gcc-modules/internal_partitions/: eshop_customer.cxx  eshop_order.cxx
gcc-modules/primes_module/: client_primes.cpp  primes.cpp  run.sh
gcc-modules/shapes/: main.cpp  run.sh  shapes.cxx  shapes_base.cxx  shapes_point.cxx
modules-cmake/: CMakeLists.txt  foo.cxx  main.cpp
ranges/: ranges_and_views.cpp
std-lib-cpp20/: std_lib_cpp20.cpp
templates/: templates.cpp
vs-modules/: Modules.sln
vs-modules/DrawingApp/: DrawingApp.cpp  DrawingApp.vcxproj  DrawingApp.vcxproj.filters  Factory.ixx  Shape-Factory.ixx  Shapes-Base.ixx  Shapes-Point.ixx  Shapes-Rectangle.ixx  Shapes-Square.cpp  Shapes-Square.ixx  Singleton.ixx
vs-modules/HeaderFiles/: Foo.ixx  HeaderFiles.vcxproj  HeaderFiles.vcxproj.filters  main.cpp  string.ixx
vs-modules/ImplementationUnits/: ImplementationUnits.vcxproj  ImplementationUnits.vcxproj.filters  eshop.ixx  eshop_io.cpp  eshop_price.cpp
vs-modules/InterfacePartitions/: InterfacePartitions.vcxproj  InterfacePartitions.vcxproj.filters  eshop-customer.ixx  eshop-order.cpp  eshop.ixx  eshop_io.cpp  main.cpp
vs-modules/InternalPartitions/: InternalPartitions.vcxproj  (+4 more)
(+6 files in other folders)
